@@ -1,3 +1,13 @@
+2011-06-09  Jian Li  <jianli@chromium.org>
+
+        Reviewed by David Levin.
+
+        Calling WebKitBlobBuilder.append with null argument should not crash
+        https://bugs.webkit.org/show_bug.cgi?id=62419
+
+        * fast/files/blob-builder-crash-expected.txt: Added.
+        * fast/files/blob-builder-crash.html: Added.
+
 2011-06-09  Gavin Barraclough  <barraclough@apple.com>
 
         Reviewed by Oliver Hunt.
